    * split tr069-remove-patches
    * add additional image-infopage and .config in firmware image (by herman72pb)
    * remove ntfs-support
    * remove umts-support
    * add 3rd alarm-clock (for 7150  7112 7141 7170  3070_V3  3270 7240 7270 7270_V3)
    * freetzmount (by hermann72pb)
    * reg SIP from outside (by MaxMuster)
    * remove AVM's NAS webinterface and internal memory file

- New packages, libs, modules:
    * aiccu 20070115
    * apr 1.3.12
    * apr-util 1.3.9
    * berkeley-db 4.8.30
    * bittwist 1.1
    * comgt 0.32
    * compcache 0.5.4 (kernel module)
    * cpmaccfg-cgi 1.0: Webinterface for cpmaccfg
    * digitemp 3.6.0
    * dosfstools 3.0.10
    * flex (libflex) 2.5.35
    * fortune 1.2
    * git 1.7.2.3
    * gnutls 2.10.1
    * gocr 0.48
    * gw6 5.1
    * hol 0.1
    * hplip 3.10.2
    * hp-utils 0.3.2
    * htop-0.8.3
    * httpry 0.1.5
    * igmpproxy 0.1
    * iptraf 3.0.1
    * ipsec-tools 0.7.2
    * iputils s20071127
    * irssi 0.8.15
    * lftp 4.0.5
    * libconfig 1.4.5
    * libdaemon 0.14
    * libdnet 1.12
    * libfreetz 0.2
    * libgd 2.0.35
    * libnet 1.1.4
    * libogg 1.1.4
    * libosip2 3.3.0
    * libpolarssl 0.14.0
    * libsynce 0.10.0
    * libtasn1 2.7
    * libvorbis 1.2.3
    * libxml 2.7.7
    * libxslt/xsltproc 1.1.26
    * lighttpd 1.4.28
    * mdev 0.6.2: First try to replace AVM's hotplug chain
      depends on 7170, 7240 and 7270.
    * minicom-2.4
    * mini-snmpd 1.2b
    * nc6
    * ncftp-3.2.4
    * netpbm-10.35.76
    * ndas-1.1-22
    * nhipt iptables cgi 0.8.3a
    * nfs-utils 1.2.0
    * ngircd 16
    * nmap 4.68
    * noip 2.1.9
    * oidentd 2.0.8
    * onlinechanged-cgi 0.1
    * openconnect 2.24
    * opendd 0.7.9
    * owfs 2.7p32
    * pcre 8.10
    * phpxmail 1.5
    * polipo 1.0.4.1
    * ppp-cgi 0.6.9
    * radvd 1.6
    * rsync 3.0.7
    * ruby-fcgi 0.8.7
    * ser2net 2.5
    * siproxd 0.8.0
    * slang 2.2.2
    * slurm 0.3.3
    * spawn-fcgi 1.6.3
    * sqlite 3.7.2