@@ -60,6 +60,7 @@ Latest changes:
     * freetzmount (by hermann72pb)
     * reg SIP from outside (by MaxMuster)
     * remove AVM's NAS webinterface and internal memory file
+    * remove 7170 (unneeded) piglet bitfile
 
 - New packages, libs, modules:
     * aiccu 20070115
